# kokkos_register_use

./: CMakeLists.txt  kernel_math.h  main.cpp
